welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:21: error: ':' expected but ')' found.
def decale(k):{
            ^PatternPicture:27: error: identifier expected but '}' found.
}
^